Bug: fix overflow hidden hiding cropper slider

--- a/src/VideoEditor/video-editor.css
+++ b/src/VideoEditor/video-editor.css
@@ -40,8 +40,6 @@
 .video-container {
   position: relative;
 
-  overflow: hidden;
-
   margin: 0 auto;
 }
 .video-wrap,
